--- a/awal.html
+++ b/awal.html
@@ -21,9 +21,9 @@
 
 
 <div style="background-color: lightblue; padding: 20px;">
-    <h1>HAI</h1>
+    <h1>HALOOOOOOOOO</h1>
     <div>
-        <p><strong> IDENTITAS DIRI</strong></p>
+        <p><strong> IDENTITAS DIRI :</strong></p>
     </div>
     <p><strong>NAMA: MUHAMMAD FADHIL</strong></p>
     <p><strong>TEMPAT DAN TANGGAL LAHIR:  BARABAI, 03 MEI 2005</strong></p>
