--- a/awal.html
+++ b/awal.html
@@ -9,7 +9,7 @@
 <body>
     <!-- Konten akan ditempatkan di sini-->
     <header style="background-color: #333; color: white; padding: 10px; text-align: center;">
-        <h1>Proyek mini</h1>
+        <h1>PROYEK MINI</h1>
         <p>Dibuat oleh MUHAMMAD FADHIL.</p>
     </header>
     <nav style="background-color: #444; color: white; padding: 10px; text-align: center;">
